fix Background on mobile

--- a/components/background/Background.module.scss
+++ b/components/background/Background.module.scss
@@ -1,8 +1,9 @@
 .canvas {
-	position: absolute;
-	width: 1200px;
-	height: 100vh;
 	z-index: -1;
+	position: absolute;
+	width: 100vw;
+	height: 100vh;
+	overflow: hidden;
 
 	.cloud1 {
 		position: absolute;
